assuan_pipe_connect            CHANGED: Take ctx arg instead of pointer to ctx.
			       If NAME is NULL, ARGV will contain fork result.
			       CHANGED: Is now what assuan_pipe_connect_ext was.
assuan_pipe_connect_ext	       REMOVED
assuan_init_pipe_server        CHANGED: Take ctx arg instead of pointer to ctx.
                               CHANGED: Swallows fds (are closed at end).
assuan_set_io_hooks	       REMOVED: Will come back in expanded form.
assuan_io_hooks_t  	       REMOVED: Will come back in expanded form.
assuan_io_monitor_t	       CHANGED: Add a hook data argument.
assuan_get_command_name        NEW
assuan_msghdr_t		       NEW
ASSUAN_INVALID_PID	       NEW
ASSUAN_NO_FIXSIGNALS           NEW
ASSUAN_SYSTEM_HOOKS_VERSION    NEW
assuan_system_hooks_t          NEW
assuan_set_system_hooks        NEW
assuan_ctx_set_system_hooks    NEW
ASSUAN_SYSTEM_PTH_IMPL         NEW
ASSUAN_SYSTEM_PTH_DECL         NEW
ASSUAN_SYSTEM_PTH              NEW
assuan_sock_init               NEW
assuan_sock_deinit             NEW
assuan_handler_t	       NEW
assuan_register_command        CHANGED: Add arg HELP_STRING.
assuan_register_bye_notify     CHANGED: Handler gets line and returns err now.
assuan_register_reset_notify   CHANGED: Handler gets line and returns err now.
assuan_register_cancel_notify  CHANGED: Handler gets line and returns err now.
assuan_register_input_notify   CHANGED: Handler returns error now.
assuan_register_output_notify  CHANGED: Handler returns error now.
assuan_process_next	       CHANGED: New DONE argument instead EOF return.
ASSUAN_PIPE_CONNECT_FDPASSING  NEW
ASSUAN_PIPE_CONNECT_DETACHED   NEW
ASSUAN_SOCKET_SERVER_FDPASSING NEW
ASSUAN_SOCKET_SERVER_ACCEPTED  NEW
ASSUAN_SOCKET_CONNECT_FDPASSING NEW
assuan_peercred_t	       NEW
assuan_get_peercred	       CHANGED: Return assuan_peercred_t.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 1.0.5 (2008-05-25)