@@ -1,3 +1,7 @@
+2009-11-25  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan.texi (Data Types): Document assuan_fdopen.
+
 2009-11-24  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.texi: Remove assuan_disconnect, assuan_deinit_server.
