@@ -1,3 +1,15 @@
+2009-11-25  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan.h (assuan_init_pipe_server): Change type of filedes to
+	assuan_fd_t.
+	(assuan_fdopen): New prototype.
+	* libassuan.vers, libassuan.def: Add assuan_fdopen.
+	* system.c (assuan_fdopen): New function.
+	* assuan-pipe-server.c (assuan_init_pipe_server): Change type of
+	filedes to assuan_fd_t.  No longer translate fd to handle.  Don't
+	set to binary either (that doesn't do anything for handles, it
+	only affects the libc fd).
+
 2009-11-24  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.h (struct _assuan_peercred) [_WIN32]: Define dummy member
